--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Droid Sans", Arial, sans-serif;
+  font-family: 'Advent Pro';font-size: 22px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
@@ -64,7 +64,7 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font: larger Arno Pro, Tribun ADF Std, serif; font-style: normal
+  font-family: 'Advent Pro';font-size: 22px;
   font-weight: 400;
   margin: 0 0 20px 0;
 }
